<resources>
    <string name="app_name">Перепись</string>


    <string name="error_default">An error has occurred. Please try again later.</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please Wait…</string>
    <string name="hint_login">логин</string>
    <string name="hint_password">пароль</string>
    <string name="btn_text_login">Войти</string>
    <string name="btn_text_server_info">Сервер адрес</string>
    <string name="authorization_system">Авторизация в системе</string>
    <string name="label_residents">Проживающих:</string>
    <string name="label_apartments">Квартир:</string>
    <string name="label_buildings">Зданий:</string>
    <string name="buildings">Buildings</string>
    <string name="title_tasks">Задания</string>
    <string name="title_sync">Синхронизация</string>
    <string name="tab_tasks">Задания</string>
    <string name="tab_sync">Синхронизация</string>
    <string name="tab_map">Карта</string>
    <string name="title_buildings">Здании</string>
    <string name="title_street">Улицы</string>
    <string name="edit">Edit</string>
    <string name="title_add_building">Добавить здание</string>
    <string name="hint_building_number">Номер дома</string>
    <string name="hint_total_flats">Total Flats</string>
    <string name="hint_area">Area Size</string>
    <string name="label_house_wall">House Wall</string>
    <string name="hint_address">Address</string>
    <string name="hint_full_address">Full Address</string>
    <string name="label_street">Улица</string>
    <string name="label_street_type">Тип улицы</string>
    <string name="label_region">Регион</string>
    <string name="save">Сохранить</string>
    <string name="label_location">Location</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="select_from_map">Отметить на карте</string>
    <string name="location">Location</string>
    <string name="label_map">Карта</string>
    <string name="label_select">Выбрать</string>
    <string name="select_location">Выберите местоположение</string>
    <string name="error_empty_field">Поле не может быть пустым</string>
    <string name="error_select_location">Select Location From Map</string>
    <string name="hint_floors">Floors</string>
    <string name="title_apartments">Apartments</string>
    <string name="label_apartment_no">Apartment No</string>
    <string name="label_rooms">Rooms</string>
    <string name="label_area">Area</string>
    <string name="label_cancel">Отмена</string>
    <string name="message_no_apartments">Нет Квартир в этом Здании</string>
    <string name="message_no_tasks">Нет Заданий</string>
    <string name="message_no_buildings">Нет Зданий</string>
    <string name="message_no_history">Нет Изменений</string>
    <string name="message_no_streets">Нет Улиц</string>
    <string name="message_location_required">Указание местоположения объекта обязательно</string>
    <string name="title_add_apartment">Добавить квартиру</string>
    <string name="title_add_street">Добавить улицу</string>
    <string name="hint_apartment_number">Номер квартиры</string>
    <string name="hint_street_name">Имя улицы</string>
    <string name="hint_street_new_name">Новое название</string>
    <string name="hint_search">Поиск</string>
    <string name="hint_total_rooms">Total Rooms</string>
    <string name="hint_total_residents">Количество проживаюших</string>
    <string name="label_apartment_type">Тип Апартамента</string>
    <string name="label_object_type">Тип объекта</string>
    <string name="hint_owner_name_surname_etc">Владелец (ФИО или организация)</string>
    <string name="hint_owner_organization">Owner/organization</string>
    <string name="hint_owner_or_organization_owner">ФИО или организация кому принадлежит</string>
    <string name="hint_comment">Примечание</string>
    <string name="hint_kato">КАТО</string>
    <string name="label_building_status">Статус объекта</string>
    <string name="hint_territory">Territory</string>
    <string name="hind_kato"></string>
    <string name="label_building_type">Тип объекта</string>
    <string name="btn_title_next">Next</string>
    <string name="btn_text_save">Сохранить</string>
    <string name="hint_name_of_street">Название улицы, проспекта, переулка</string>
    <string name="label_have_mark">Отмечено на карте</string>
    <string name="label_not_have_mark">Не отмечено на карте</string>
    <string name="hint_count_of_lives_study_etc">Число проживающих учашихся в школах интернатах, число мест в больницах, санаториях, гостиницах, домах отдыха, и т.п.</string>

    <string name="message_wrong_credentials">Неправильные данные</string>
    <string name="message_wrong_key">Неправильные ключ</string>
    <string name="message_connection_problem">Проблема соединения</string>
    <string name="message_success_sync_from_server">Удачная синхронизация с сервером</string>
    <string name="message_sync_in_progress">Синхронизация в процессе.</string>
    <string name="message_success_sync_to_server">Удачная отправка изменений</string>
    <string-array name="demo_list">
        <item>Bricks</item>
        <item>Concrete</item>
    </string-array>

    <string-array name="map_type_list">
        <item>Sattelite</item>
        <item>Normal</item>
    </string-array>
    <string name="map_type_satellite">Спутник</string>
    <string name="map_type_normal">Нормальный</string>


    <string name="label_sync_from_server">Синхронизация с сервера</string>
    <string name="label_sync_to_server">Отправить изменения на сервер</string>
    <string name="label_last_sync">Дата последней синхронизации: %1$s</string>
    <string name="label_last_sync_short">Дата последней синхронизации</string>
    <string name="label_last_send_short">Дата последней отправки</string>
    <string name="label_get_task">Получить задание</string>
    <string name="label_send">Отправить</string>
    <string name="label_logout">Выйти</string>
    <string name="label_sync">Синхронизировать</string>
    <string name="label_ok">ОК</string>
    <string name="label_continue">Продолжить</string>
    <string name="label_actions">Действие</string>
    <string name="state_sync">Синхронизация</string>
    <string name="state_send">Отправка</string>
    <!--<string name="label_apt_no">кв.</string>-->
    <!--<string name="label_street_short">ул.</string>-->
    <!--<string name="label_bld_short">д.</string>-->
    <!--<string name="google_maps_key">AIzaSyAtTIPifdhZvxzo4XCIpwknHIu-MkWrdIU</string>-->

    <string name="dialog_title_attention">Внимание</string>
    <string name="dialog_title_warning">Предупреждение</string>
    <string name="dialog_logout_confirmation">Вы уверены?</string>
    <string name="dialog_duplicate_apartment_number">Квартира с этим номером уже существует.</string>
    <string name="dialog_duplicate_building_number">Дом с этим номером уже существует.</string>
    <string name="dialog_duplicate_street_name">Улица с этим именем уже существует.</string>
    <string name="dialog_logut_without_sync_message">Есть не синхронизированные данные. Вы хотите выйти без синхронизации?</string>
    <string name="dialog_not_all_sync_note">Не все изменения отправлены на сервер. Вы уверены что хотите продолжить? Изменения будут потеряны.</string>

    <string name="msg_grand_body">Требуется разрешение на хранение для отображения карты</string>
    <string name="label_grand">Разрешать</string>

    <string name="symbol_n">№</string>
    <string name="label_kato">КАТО</string>
    <string name="label_date">Дата</string>

    <string name="label_settings">Настройки</string>
    <string name="label_server_address">Сервер адрес</string>
    <string name="label_server_ip">Сервер IP</string>
    <string name="label_server_port">Сервер Port</string>


    <string name="msg_waiting_location">Ожидание местоположения</string>

    <string name="msg_no_changes">Нет изменений</string>
</resources>
