<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_view_list"
            android:checkable="true"
            android:title="@string/tab_tasks" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:checkable="true"
            android:title="@string/tab_map"
            />
    </group>

    <item android:title="@string/label_actions">
        <menu>
            <item
                android:id="@+id/nav_download"
                android:title="@string/tab_sync" />
            <item
                android:id="@+id/nav_upload"
                android:title="@string/label_send"
                />
        </menu>
    </item>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/label_logout" />
        </menu>
    </item>

</menu>
