<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar_add_building" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/et_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_building_number"
                    android:inputType="textNoSuggestions"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_owner_organization"
                    android:inputType="textNoSuggestions"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_territory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_territory"
                    android:inputType="textNoSuggestions"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_total_flats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_total_flats"
                    android:inputType="numberSigned"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_area"
                    android:inputType="numberDecimal"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_floors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_floors"
                    android:inputType="numberDecimal"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:fontFamily="@font/opensanslight"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/label_house_wall"-->
            <!--android:textColor="@color/colorAccent" />-->

            <!--<FrameLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:background="@drawable/spinner_bg">-->

            <!--<android.support.v7.widget.AppCompatSpinner-->
            <!--android:id="@+id/sp_house_wall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:entries="@array/demo_list"-->
            <!--android:padding="16dp" />-->

            <!--</FrameLayout>-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensansbold"
                android:padding="8dp"
                android:text="@string/hint_address"
                android:textAllCaps="true"
                android:textColor="@color/text_primary" />

            <EditText
                android:id="@+id/et_full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/opensansregular"
                android:hint="@string/hint_full_address"
                android:inputType="textPostalAddress"
                android:padding="16dp"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensanslight"
                android:padding="8dp"
                android:text="@string/label_region"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_bg">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/demo_list"
                    android:padding="16dp" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensanslight"
                android:padding="8dp"
                android:text="@string/label_street"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_bg">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/demo_list"
                    android:padding="16dp" />

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensanslight"
                android:padding="8dp"
                android:text="@string/label_street_type"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_bg">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_street_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/demo_list"
                    android:padding="16dp" />

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensanslight"
                android:padding="8dp"
                android:text="@string/label_building_type"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_bg">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_building_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/demo_list"
                    android:padding="16dp" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensanslight"
                android:padding="8dp"
                android:text="@string/label_building_status"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/spinner_bg">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_building_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/demo_list"
                    android:padding="16dp" />

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensansbold"
                android:padding="8dp"
                android:text="@string/label_location"
                android:textAllCaps="true"
                android:textColor="@color/text_primary" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:enabled="false"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_latitude"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:enabled="false"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/hint_longitude"
                    android:padding="16dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_map"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_map_white"
                android:text="@string/select_from_map" />


            <Button
                android:id="@+id/btn_next"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_title_next"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>


    </ScrollView>
</LinearLayout>