<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar_sync" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/label_sync_from_server"
                    android:textColor="@color/text_gray_1"
                    android:textSize="@dimen/text_medium_large" />

                <Button
                    android:id="@+id/btn_sync_with_server"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/padding_medium"
                    android:paddingLeft="@dimen/padding_ex_large"
                    android:paddingRight="@dimen/padding_ex_large"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/label_get_task"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/last_sync_from_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/label_last_sync"
                    android:textColor="@color/text_gray_2"
                    android:textSize="@dimen/text_ex_small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/label_sync_to_server"
                    android:textColor="@color/text_gray_1"
                    android:textSize="@dimen/text_medium_large" />

                <Button
                    android:id="@+id/btn_sync_to_server"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/padding_medium"
                    android:paddingLeft="@dimen/padding_ex_large"
                    android:paddingRight="@dimen/padding_ex_large"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/label_send"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/last_sync_to_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/label_last_sync"
                    android:textColor="@color/text_gray_2"
                    android:textSize="@dimen/text_ex_small" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:paddingLeft="@dimen/padding_ex_large"
                android:paddingRight="@dimen/padding_ex_large"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/label_logout"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/pb_sync"
        android:layout_width="@dimen/loader_size"
        android:layout_height="@dimen/loader_size"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>