<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:text="@string/label_server_address"
        android:textAllCaps="true"
        android:textColor="@color/dialog_title"
        android:textSize="@dimen/text_medium" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@null"
                android:fontFamily="@font/opensansregular"
                android:hint="@string/label_server_ip"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/line_color_gray" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@null"
                android:hint="@string/label_server_port"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color_gray" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:padding="@dimen/tv_authorization_system_padding_medium"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_text_size" />
</LinearLayout>